--- a/index.html
+++ b/index.html
@@ -58,6 +58,19 @@
             <!--add D3 chart-->
             <div id="chart-C" class="chart3"></div>
             
+            <!--add Tableau field of study-->
+            <script type='text/javascript' src='https://us-west-2b.online.tableau.com/javascripts/api/viz_v1.js'></script>
+            <div class='tableauPlaceholder' style='width: 1000px; height: 827px;'>
+                <object class='tableauViz' width='1000' height='827' style='display:none;'>
+                    <param name='host_url' value='https%3A%2F%2Fus-west-2b.online.tableau.com%2F' /> 
+                    <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;xuanchengfan' />
+                    <param name='name' value='info247&#47;Field_dashboard' />
+                    <param name='tabs' value='no' />
+                    <param name='toolbar' value='yes' />
+                    <param name='showAppBanner' value='false' />
+                    <param name='filter' value='iframeSizedToWindow=true' />
+                </object>
+            </div>
             <!--add future trends-->
             <div class="future"></div>
             
