--- a/index.html
+++ b/index.html
@@ -47,10 +47,6 @@
             fill: #fff;
             stroke-width: 0;
           }
-          #dropdown {
-                margin-bottom: 20px;
-                margin-right: 35px;
-          }
         </style>
     </head>
     
@@ -155,9 +151,10 @@
             <!--add D3 chart-->
             <div id="studyingpath">
             <div id="chart-C" class="chart3"></div>
-            <div id="dropdown"></div>
+            <div id="dropdown" style="height: 100px;"></div>
             <div id="map"></div>
             </div>
+
             
             <!--add future trends-->
             <div id="future">
