--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
             <!--add D3 chart-->
             <div id="studyingpath">
             <div id="chart-C" class="chart3"></div>
-            <div id="dropdown" style="height: 100px;"></div>
+            <div id="dropdown"></div>
+
             <div id="map"></div>
             </div>
 
