adjust cards and animation

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div id="studyfield">
                 
                 <div class="students">
-                    <img src="images/students.png" alt="students avatar">
+                    <!--<img src="images/students.png" alt="students avatar">-->
                     <a href="#studyingpath"><div class="mask"></div></a>
                 </div>
             
@@ -178,7 +178,7 @@
                                 <div class="back">
                                     <div class="card blue lighten-1">
                                         <div class="card-content white-text">
-                                           <p class="flow-text">In addition to the prosperous metropolitan cities such as Beijing, Shanghai and Guangzhou, more students whose hometowns are mid-size or small-size cities in China go to U.S. to pursue education.
+                                           <p id="detail_1">In addition to the prosperous metropolitan cities such as Beijing, Shanghai and Guangzhou, more students whose hometowns are mid-size or small-size cities in China go to U.S. to pursue education.
                                         </p> 
                                         </div>
                                         </div>
@@ -205,7 +205,7 @@
                                 <div class="back">
                                     <div class="card blue lighten-1">
                                         <div class="card-content white-text">
-                                           <p class="flow-text">The STEM majors will still be the popular choices for Chinese students. Nonetheless, students are choosing more diverse majors in different levels of education in U.S..
+                                           <p id="detail_2">The STEM majors will still be the popular choices for Chinese students. Nonetheless, students are choosing more diverse majors in different levels of education in U.S..
                                         </p> 
                                         </div>
                                         </div>
@@ -231,7 +231,7 @@
                                 <div class="back">
                                     <div class="card blue lighten-1">
                                         <div class="card-content white-text">
-                                           <p class="flow-text">Cities in the West and East Coast of U.S. are still popular destinations for Chinese students. Nonetheless, places where students traveling to pursue education become more diverse.
+                                           <p id="detail_3">Cities in the West and East Coast of U.S. are still popular destinations for Chinese students. Nonetheless, places where students traveling to pursue education become more diverse.
                                         </p> 
                                         </div>
                                         </div>
