--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen,projection"/>
         <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
         <script src="https://code.highcharts.com/highcharts.js"></script>
-        <script src="//code.jquery.com/jquery-2.0.0.js"></script>
-        <script src="//d3js.org/d3.v4.min.js"></script>
-        <script src="//d3js.org/topojson.v1.min.js"></script>
-        <script src="http://d3js.org/queue.v1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-2.0.0.js"></script>
+        <script src="https://d3js.org/d3.v4.min.js"></script>
+        <script src="https://d3js.org/topojson.v1.min.js"></script>
+        <script src="https://d3js.org/queue.v1.min.js"></script>
         <script src="js/d3.js"></script>
         <script
-            src="http://code.jquery.com/jquery-3.3.1.min.js"
+            src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous"></script>
    
@@ -256,7 +256,7 @@
         <!--JavaScript at end of body for optimized loading-->
         <script type="text/javascript" src="js/materialize.js"></script>
         <script src="js/init.js"></script>
-        <script src="http://d3js.org/d3.v4.min.js"></script>
+        <script src="https://d3js.org/d3.v4.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
         
     </body>
